/app/ replaced with {{ root }}

--- a/yaapp/templates/yabase/app/notifications/notification.mustache
+++ b/yaapp/templates/yabase/app/notifications/notification.mustache
@@ -6,13 +6,13 @@
     {% if notification %}
         {% if notification.from_radio_uuid %}
         <div>
-            {% trans "message from radio:" %} <a href='/app/radio/{{notification.from_radio_uuid}}/' data-uuid='<{{notification.from_radio_uuid}}' class='radio-link'>{{notification.from_radio_name}}</a>
+            {% trans "message from radio:" %} <a href='{{ root }}radio/{{notification.from_radio_uuid}}/' data-uuid='<{{notification.from_radio_uuid}}' class='radio-link'>{{notification.from_radio_name}}</a>
         </div>
         {% endif %}
     {% else %}
     <%#from_radio_uuid%>
     <div>
-        {% trans "message from radio:" %} <a href='/app/radio/<%from_radio_uuid%>/' data-uuid='<%from_radio_uuid%>' class='radio-link'><%from_radio_name%></a>
+        {% trans "message from radio:" %} <a href='{{ root }}radio/<%from_radio_uuid%>/' data-uuid='<%from_radio_uuid%>' class='radio-link'><%from_radio_name%></a>
     </div>
     <%/from_radio_uuid%>
     {% endif %}
