--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -433,8 +433,8 @@ HTML, BODY { height: 100%; }
                       <div class="header-separation"><img src="/media/app/images/header-separation.png" width="4" height="54" alt="Header Separation"></div>
                       <a class='float-left login-btn' id='login-btn' href='{% url webapp_login %}'>{% trans 'Login' %}</a>
                       <div id='login-box-container' class='hidden'>
-                        <a id='login-btn-facebook' href="{% url socialauth_begin 'facebook' %}?next=/app/" rel="nofollow"><img src="/media/app/images/login/login-icon-facebook.png"><span>{% trans "Login with Facebook" %}</span></a>
-                        <a id='login-btn-twitter' href="{% url socialauth_begin 'twitter' %}?next=/app/" rel="nofollow"><img src="/media/app/images/login/login-icon-twitter.png"><span>{% trans "Login with Twitter" %}</span></a>
+                        <a id='login-btn-facebook' href="{% url socialauth_begin 'facebook' %}?next={{ root }}" rel="nofollow"><img src="/media/app/images/login/login-icon-facebook.png"><span>{% trans "Login with Facebook" %}</span></a>
+                        <a id='login-btn-twitter' href="{% url socialauth_begin 'twitter' %}?next= {{ root }}" rel="nofollow"><img src="/media/app/images/login/login-icon-twitter.png"><span>{% trans "Login with Twitter" %}</span></a>
                         <div class='login-separation-line'></div>
                         <form id='popup-login-form' method='post' action="{% url webapp_login %}">{% csrf_token %}
                           <span>{% trans "Email login" %}</span>
