--- a/yaapp/templates/yabase/app/programming/importFromItunes.mustache
+++ b/yaapp/templates/yabase/app/programming/importFromItunes.mustache
@@ -1,5 +1,5 @@
 {% load i18n %}
-<form id='programming-import-itunes' enctype="multipart/form-data" class='form-horizontal well' action="/app/radio/<%uuid%>/programming/" method='post'>{% csrf_token %}
+<form id='programming-import-itunes' enctype="multipart/form-data" class='form-horizontal well' action='{{ root }}radio/<%uuid%>/programming/' method='post'>{% csrf_token %}
     {{ import_itunes_form }}
     <div class="form-actions">
         <input type='hidden' name='uuid' value='<% uuid %>'/>
