--- a/yaapp/templates/yabase/app/radioCell.mustache
+++ b/yaapp/templates/yabase/app/radioCell.mustache
@@ -5,8 +5,8 @@
     </div>
 	<div class="radio-container">
 		<div class='picture'>
-	    <a class='big-profile-picture' href='/app/radio/<% uuid %>/'><img src='<% picture %>' width='210' height='210'/><a>
-	    <a class='small-profile-picture' href='/app/radio/<% uuid %>/'><img src='<% picture %>' width='147' height='147'/><a>
+	    <a class='big-profile-picture' href='{{ root }}radio/<% uuid %>/'><img src='<% picture %>' width='210' height='210'/><a>
+	    <a class='small-profile-picture' href='{{ root}}radio/<% uuid %>/'><img src='<% picture %>' width='147' height='147'/><a>
 	    </div>
 
 		<div class='mask' style='display:none;'>
