replaced hardcoded /app/ by {{ root }}

--- a/yaapp/templates/yabase/app/mobileLeftMenu.html
+++ b/yaapp/templates/yabase/app/mobileLeftMenu.html
@@ -33,7 +33,7 @@
           <img src="/media/app/images/responsive-icon-mysettings.png" alt='settings'>
           <span>{% trans 'Settings' %}</span>
         </a>
-        <a href='/logout/?next=/app/' id='phone-menu-signout' class='phone-menu-list'>
+        <a href='/logout/?next={{ root }}' id='phone-menu-signout' class='phone-menu-list'>
           <img src="/media/app/images/responsive-icon-signout.png" alt='sign out'/>
           <span>{% trans 'Logout' %}</span>
         </a>
