removed hardcoded /app/, replaced by :
* app_name (app, deezer)
* root ( /app/, /deezer/)

--- a/yaapp/templates/yabase/app/footer.html
+++ b/yaapp/templates/yabase/app/footer.html
@@ -3,8 +3,8 @@
     <footer>
         <div id="contacts" class="blocks">
             <p>
-                <a id='btn-contact' href="{% url webapp_contact %}" class="footer-text-color1" title="{% trans 'Contact' %}">{% trans "Contact" %}</a> -
-                <a id='btn-legal' href="{% url webapp_legal %}" class="footer-text-color1" title="{% trans 'Legal informations' %}">{% trans 'Legal informations' %}</a>
+                <a id='btn-contact' href="{% url webapp_contact app_name %}" class="footer-text-color1" title="{% trans 'Contact' %}">{% trans "Contact" %}</a> -
+                <a id='btn-legal' href="{% url webapp_legal app_name %}" class="footer-text-color1" title="{% trans 'Legal informations' %}">{% trans 'Legal informations' %}</a>
             </p>
             <p>
                 <a href="https://facebook.com/yasound" class="footer-text-color2" title="facebook" target='_blank'>
