--- a/yaapp/templates/yabase/app/common/subMenu.mustache
+++ b/yaapp/templates/yabase/app/common/subMenu.mustache
@@ -2,7 +2,7 @@
 {% load thumbnail %}
 <div id="sub-header">
     <div class="responsive-container visible-phone">
-        <a id='responsive-song' href="{% url webapp_radio current_uuid %}" class='yatooltip'>
+        <a id='responsive-song' href="{% url webapp_radio app_name current_uuid %}" class='yatooltip'>
             <img id='track-image' src='{% if not static %}<% cover %>{% endif %}' width="32" height="32" alt="Radio Picto">
         </a>
         <a id="play-btn">
@@ -25,20 +25,20 @@
 		<div id="sub-header-pointer" class='menu{{submenu_number}}'></div>
         <ul id="sub-header-nav">
             <li class="first {% ifequal submenu_number 1 %}selected{% endifequal %}">
-                <a href='{% url webapp %}' class='mobile-selection'></a>
-                <a href='{% url webapp %}' id="selection">{% trans "Selection" %}</a>
+                <a href='{% url webapp app_name %}' class='mobile-selection'></a>
+                <a href='{% url webapp app_name %}' id="selection">{% trans "Selection" %}</a>
             </li>
             <li class="{% ifequal submenu_number 2 %}selected{% endifequal %}">
-                <a href='{% url webapp_top %}' class='mobile-top'></a>
-                <a href='{% url webapp_top %}' id='top' >{% trans "Top" %}</a>
+                <a href='{% url webapp_top app_name %}' class='mobile-top'></a>
+                <a href='{% url webapp_top app_name %}' id='top' >{% trans "Top" %}</a>
             </li>
             <li class="{% ifequal submenu_number 3 %}selected{% endifequal %}">
-                <a href='{% url webapp_friends %}' class='mobile-friends'></a>
-                <a href='{% url webapp_friends %}' id='friends'>{% trans "My friends" %}</a>
+                <a href='{% url webapp_friends app_name %}' class='mobile-friends'></a>
+                <a href='{% url webapp_friends app_name %}' id='friends'>{% trans "My friends" %}</a>
             </li>
             <li class="{% ifequal submenu_number 4 %}selected{% endifequal %}">
-                <a href='{% url webapp_favorites %}' class='mobile-favorites'></a>
-                <a href='{% url webapp_favorites %}' id='favorites'>{% trans "Favorites" %}</a>
+                <a href='{% url webapp_favorites app_name %}' class='mobile-favorites'></a>
+                <a href='{% url webapp_favorites app_name %}' id='favorites'>{% trans "Favorites" %}</a>
             </li>
         </ul>
         <div>
@@ -54,7 +54,7 @@
         <div id="sub-header-separation">
         </div>
             {% if request.user.is_authenticated %}
-            <a id="create-radio" href="{% url webapp_radios %}">
+            <a id="create-radio" href="{% url webapp_radios app_name %}">
                 <span>{% trans "Create radio" %}</span>
             </a>
             {% endif %}
