--- a/yaapp/templates/yabase/app/favorites/favoritesPage.mustache
+++ b/yaapp/templates/yabase/app/favorites/favoritesPage.mustache
@@ -12,7 +12,7 @@
 		<img class='favorites-login-large'src="/media/app/images/icon-star-big-blue.png" height='164' width='164'>
 		<img class='favorites-login-small' src="/media/app/images/icon-star-big-blue.png" height='100' width='100'>
 		<p class='favorites-login-p'>{% trans "Log in to view your favorites." %}</p>
-        <form action='{% url webapp_login %}' method='get'>
+        <form action='{% url webapp_login app_name %}' method='get'>
 		<button id='login-btn'>{% trans "Login" %}</button>
         </form>
 	</div>
