--- a/yaapp/templates/yabase/app/mobileLeftMenu.html
+++ b/yaapp/templates/yabase/app/mobileLeftMenu.html
@@ -2,12 +2,12 @@
 {% load thumbnail %}
       <div id='mobile-menu-content' class='hidden-display'>
         {% if request.user.is_anonymous %}
-        <a href='{% url webapp_login %}' id='phone-menu-signin' class='phone-menu-list'>
+        <a href='{% url webapp_login app_name %}' id='phone-menu-signin' class='phone-menu-list'>
           <img src="/media/app/images/responsive-icon-signin.png" alt='sign in'/>
           <span>{% trans 'Sign In' %}</span>
         </a>
         {% else %}
-        <a href='{% url webapp_profile request.user.username %}' id='phone-menu-profile' class='phone-menu-list'>
+        <a href='{% url webapp_profile app_name request.user.username %}' id='phone-menu-profile' class='phone-menu-list'>
            {% if user_profile.picture %}
             {% thumbnail user_profile.picture "28x28" format='PNG' as im %}
             <img src="{{ im.url  }}" width="28" height="28" alt="Profile Picture"/>
