--- a/yaapp/templates/yabase/app/myRadios/myRadiosPage.mustache
+++ b/yaapp/templates/yabase/app/myRadios/myRadiosPage.mustache
@@ -29,7 +29,7 @@
 <div class='row'>
     <div class='span12'>
         <div id='create-radio-container'>
-        <a class='yabutton-large' id='create-radio-btn' href='{% url webapp_new_radio %}'>{% trans "Create radio" %}</a>
+        <a class='yabutton-large' id='create-radio-btn' href='{% url webapp_new_radio app_name %}'>{% trans "Create radio" %}</a>
         </div>
     </div>
 </div>
