--- a/yaapp/templates/yabase/app/profile/user.mustache
+++ b/yaapp/templates/yabase/app/profile/user.mustache
@@ -22,7 +22,7 @@
     <%/owner%>
     <%#owner%>
     <button type="button" id='logout-btn' class="user-btn yabutton right"><a href='{% url logout %}'>{% trans "Logout" %}</a></button>
-    <button type="button" id='settings-btn' class="user-btn yabutton right"><a href='{% url webapp_settings %}'>{% trans "Settings" %}</a></button>
+    <button type="button" id='settings-btn' class="user-btn yabutton right"><a href='{% url webapp_settings app_name %}'>{% trans "Settings" %}</a></button>
     <%/owner%>
     <em class='hidden-phone'><% agc %></em>
     <p class="profile-bio"><% bio_text %></p>
