--- a/yaapp/templates/yabase/app/radioCell.html
+++ b/yaapp/templates/yabase/app/radioCell.html
@@ -5,7 +5,7 @@
     </div>
     <div class="radio-container">
         <div class='picture'>
-        <a href='{% url webapp_radio radio.uuid %}'><img src='{{ radio.picture_url }}' width='210' height='210'/></a>
+        <a href='{% url webapp_radio app_name radio.uuid %}'><img src='{{ radio.picture_url }}' width='210' height='210'/></a>
         </div>
 
         <div class='mask' style='display:none;'>
