--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -360,7 +360,7 @@ HTML, BODY { height: 100%; }
       <div class="navbar-inner">
         <div class="container">
       <div id="brand-logo" >
-				<a href="{% url webapp %}" id='btn-webapp'>
+				<a href="{% url webapp app_name %}" id='btn-webapp'>
 					<img src="/media/app/images/brand-logo.png" width="138" height="23" alt="Logo Yasound">
 				</a>
 			</div>
@@ -392,7 +392,7 @@ HTML, BODY { height: 100%; }
 		                <div id="profile-picture">
 		                   {% if user_profile.picture %}
 		                       {% thumbnail user_profile.picture "28x28" format='PNG' as im %}
-		                        <a href='{% url webapp_profile request.user.username %}' class='yatooltip'>
+		                        <a href='{% url webapp_profile app_name request.user.username %}' class='yatooltip'>
 									<img src="{{ im.url  }}" width="28" height="28" alt="Profile Picture"/>
                        <div id='profile-box-container' class='hidden'>
                         <div>
@@ -404,7 +404,7 @@ HTML, BODY { height: 100%; }
 								</a>
 		                       {% endthumbnail %}
 		                   {% else %}
-		                        <a href='{% url webapp_profile request.user.username %}' class='yatooltip'>
+		                        <a href='{% url webapp_profile app_name request.user.username %}' class='yatooltip'>
 									<img src="/media/images/default_image.png" width="28" height="28" alt="Profile Picture"/>
                        <div id='profile-box-container' class='hidden'>
                         <div>
@@ -420,7 +420,7 @@ HTML, BODY { height: 100%; }
 
 		                </div>
 		                <div>
-		                    <a id="messages-btn" class="header-notification yatooltip" href="{% url webapp_notifications %}">
+		                    <a id="messages-btn" class="header-notification yatooltip" href="{% url webapp_notifications app_name %}">
 		                        <span class="badge badge-info {% ifequal notification_count 0 %}hidden{% endifequal %}" id="message-position-absolute">{{ notification_count }}</span>
 		                    </a>
 		                </div>
@@ -429,14 +429,14 @@ HTML, BODY { height: 100%; }
 		                </div>
 		                {% else %}
 		                <div id='login'>
-		                  <a class='float-left' id='signup-btn' href='{% url webapp_signup %}'>{% trans 'Signup' %}</a>
+		                  <a class='float-left' id='signup-btn' href='{% url webapp_signup app_name %}'>{% trans 'Signup' %}</a>
                       <div class="header-separation"><img src="/media/app/images/header-separation.png" width="4" height="54" alt="Header Separation"></div>
-                      <a class='float-left login-btn' id='login-btn' href='{% url webapp_login %}'>{% trans 'Login' %}</a>
+                      <a class='float-left login-btn' id='login-btn' href='{% url webapp_login app_name %}'>{% trans 'Login' %}</a>
                       <div id='login-box-container' class='hidden'>
                         <a id='login-btn-facebook' href="{% url socialauth_begin 'facebook' %}?next={{ root }}" rel="nofollow"><img src="/media/app/images/login/login-icon-facebook.png"><span>{% trans "Login with Facebook" %}</span></a>
                         <a id='login-btn-twitter' href="{% url socialauth_begin 'twitter' %}?next= {{ root }}" rel="nofollow"><img src="/media/app/images/login/login-icon-twitter.png"><span>{% trans "Login with Twitter" %}</span></a>
                         <div class='login-separation-line'></div>
-                        <form id='popup-login-form' method='post' action="{% url webapp_login %}">{% csrf_token %}
+                        <form id='popup-login-form' method='post' action="{% url webapp_login app_name %}">{% csrf_token %}
                           <span>{% trans "Email login" %}</span>
                           <input placeholder="{% trans 'Email' %}" type="email" required="required" name="email">
                           <input placeholder="{% trans 'Password' %}"class="right-input" required="required" type="password" name="password">
