fixed bad html formatting

--- a/yaapp/templates/mailtemplates/invitation-facebook/index.html
+++ b/yaapp/templates/mailtemplates/invitation-facebook/index.html
@@ -36,7 +36,9 @@ Vous aimez Yasound ? Venez nous le dire sur Facebook !<br/><br/>
 La nouvelle version de Yasound approche à grands pas, et vous êtes impatients de découvrir les nouveautés ? <br/><br/>
 Retrouvez chaque semaine de l'info exclusive sur les prochaines fonctionnalités, suivez l'actu musicale et tentez votre chance pour gagner des places de concerts et des CD. <br/><br/>
 
-<a href='http://www.facebook.com/Yasound' alt='Page facebook de Yasound'><img src='https://yasound.com/media/newsletters/invitation-facebook/facebook.png'/ width='145px' height='49px'></a> </br>
+<a href='http://www.facebook.com/Yasound'>
+  <img src='https://yasound.com/media/newsletters/invitation-facebook/facebook.png' alt='Page facebook de Yasound' width='145' height='49'/>
+</a> <br/>
 
 &nbsp;<br>
 Musicalement,<br>
