--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -3439,6 +3439,28 @@ ul .radio-with-stats-cells li {
     margin:55px 0px;
 }
 
+.invite {
+    margin-top:64px;
+    margin-left:45px;
+}
+
+.invite ul {
+    list-style: none;
+    margin-left:0;
+}
+
+.invite ul li {
+    margin-left:0;
+}
+
+#invite-facebook {
+    font-size:14px;
+    background: url(../app/images/friends/friend-facebook.png) 0 50% no-repeat;
+    padding:32px;
+    padding-left:40px;
+}
+
+
 /**
  * Gift
  */
