--- a/yaapp/templates/yabase/app/friends/friendsPage.mustache
+++ b/yaapp/templates/yabase/app/friends/friendsPage.mustache
@@ -7,6 +7,11 @@
         </ul>
         <div class='cell-pagination' id='pagination'></div>
     </div>
+    <div class='span12 invite'>
+        <ul>
+            <li><a href='#' id='invite-facebook'>{% trans "Invite your facebook friends" %}</a></li>
+        </ul>
+    </div>
 </div>
 {% else %}
 <div class='row'>
