--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -21,6 +21,7 @@
 <script type="text/javascript" type="text/javascript" src="/media/js/flot/excanvas.min.js"></script>
 <![endif]-->
 
+<link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
 
 {% block extra_head %}
     {% block fb_open_graph %}{% endblock %}
