--- a/yaapp/templates/yabase/app/myRadios/radioWithStatsCell.mustache
+++ b/yaapp/templates/yabase/app/myRadios/radioWithStatsCell.mustache
@@ -15,7 +15,7 @@
     </div>
     <div class='stats'>
 		<div class='minutes-spent'>
-	    	<em class=''><% overall_listening_time %></em>
+	    	<em class=''><% overall_listening_time_minutes %></em>
 			<span class=''>{% trans "Minutes of music played" %}</span>
 		</div>
 		<div class='new-messages'>
