updated facebook invitation newsletter

--- a/yaapp/templates/mailtemplates/invitation-facebook/index.html
+++ b/yaapp/templates/mailtemplates/invitation-facebook/index.html
@@ -27,11 +27,9 @@ body {
         </tr>
         <tr>
           <td width="21" align="left" valign="top">&nbsp;</td>
-          <td width="506" align="left" valign="top"><p style="font-family:Arial, Helvetica, sans-serif; font-size:12px; color:#d8d8d8; font-weight:bold; text-align:right; margin-top:0px;">mercredi 26 septembre 2012</p><p style="font-family:Arial, Helvetica, sans-serif; font-size:12px; color:#373737"><span style="color:#ef7b2b; font-weight:bold; font-size:14px">
-              Yasound est aussi sur Facebook</span><br>
-&nbsp;              <br>
+          <td width="506" align="left" valign="top"><p style="font-family:Arial, Helvetica, sans-serif; font-size:12px; color:#d8d8d8; font-weight:bold; text-align:right; margin-top:0px;">vendredi 28 septembre 2012</p><p style="font-family:Arial, Helvetica, sans-serif; font-size:12px; color:#373737">
 
-Vous aimez Yasound ? Venez nous le dire sur Facebook !<br/><br/>
+<span style="color:#ef7b2b; font-weight:bold; font-size:14px">Vous aimez Yasound ? Venez nous le dire sur Facebook !</span><br/><br/>
 
 La nouvelle version de Yasound approche à grands pas, et vous êtes impatients de découvrir les nouveautés ? <br/><br/>
 Retrouvez chaque semaine de l'info exclusive sur les prochaines fonctionnalités, suivez l'actu musicale et tentez votre chance pour gagner des places de concerts et des CD. <br/><br/>
