wip on facebook invitation newsletter

--- a/yaapp/templates/mailtemplates/invitation-facebook/index.html
+++ b/yaapp/templates/mailtemplates/invitation-facebook/index.html
@@ -32,7 +32,7 @@ body {
 <span style="color:#ef7b2b; font-weight:bold; font-size:14px">Vous aimez Yasound ? Venez nous le dire sur Facebook !</span><br/><br/>
 
 La nouvelle version de Yasound approche à grands pas, et vous êtes impatients de découvrir les nouveautés ? <br/><br/>
-Retrouvez chaque semaine de l'info exclusive sur les prochaines fonctionnalités, suivez l'actu musicale et tentez votre chance pour gagner des places de concerts et des CD. <br/><br/>
+Retrouvez de l'info exclusive sur les prochaines fonctionnalités, suivez l'actu musicale et tentez votre chance pour gagner des places de concerts et des CD. <br/><br/>
 
 <a href='http://www.facebook.com/Yasound'>
   <img src='https://yasound.com/media/newsletters/invitation-facebook/facebook.png' alt='Page facebook de Yasound' width='145' height='49'/>
