--- a/yaapp/templates/yabase/app/common/subMenu.mustache
+++ b/yaapp/templates/yabase/app/common/subMenu.mustache
@@ -34,7 +34,7 @@
             </li>
             <li class="{% ifequal submenu_number 3 %}selected{% endifequal %}">
                 <a href='{% url webapp_friends app_name %}' class='mobile-friends'></a>
-                <a href='{% url webapp_friends app_name %}' id='friends'>{% trans "My friends" %}</a>
+                <a href='{% url webapp_friends app_name %}' id='friends'>{% trans "People" %}</a>
             </li>
             <li class="{% ifequal submenu_number 4 %}selected{% endifequal %}">
                 <a href='{% url webapp_favorites app_name %}' class='mobile-favorites'></a>
