--- a/yaapp/templates/yabase/app/friends/userFollowersPage.mustache
+++ b/yaapp/templates/yabase/app/friends/userFollowersPage.mustache
@@ -1,7 +1,7 @@
 {% load i18n %}
 <div class='span12 profile-background'>
     <button class='yabutton right' id='back-btn'>{% trans 'Back to profile' %}</button>
-    <h2 class='zone-title'>{% trans "People you follow" %}</h2>
+    <h2 class='zone-title'>{% trans "Followers" %}</h2>
     <ul id='results'>
     <img class='loading-mask' src='/media/images/loading-white.gif'/>
     </ul>
