--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -230,6 +230,9 @@ HTML, BODY { height: 100%; }
    <script type='text/html' id='userFriendsPageTemplate'>
      {% include "yabase/app/friends/userFriendsPage.mustache" %}
    </script>
+   <script type='text/html' id='userFollowersPageTemplate'>
+     {% include "yabase/app/friends/userFollowersPage.mustache" %}
+   </script>
    <script type='text/html' id='userRadiosPageTemplate'>
      {% include "yabase/app/radio/userRadiosPage.mustache" %}
    </script>
