--- a/yaapp/templates/yabase/app/friends/friendsPage.mustache
+++ b/yaapp/templates/yabase/app/friends/friendsPage.mustache
@@ -1,17 +1,33 @@
 {% load i18n %}
 {% if request.user.is_authenticated %}
-<div class='row'>
+<div class='row common-background'>
+    <div class='span12 no-margin'>
+        <h1>{% trans "People you follow" %}</h1>
+    </div>
+
     <div class='span12 invite'>
         <ul>
             <li><a href='#' id='invite-facebook'>{% trans "Invite your facebook friends" %}</a></li>
         </ul>
     </div>
-    <div class='span12'>
+    <div class='span12 no-margin '>
         <ul id='results'>
-        <img class='loading-mask' src='/media/images/loading.gif'/>
+        <img class='loading-mask' src='/media/images/loading-white.gif'/>
         </ul>
         <div class='cell-pagination' id='pagination'></div>
+        <div class='separation-line'></div>
     </div>
+
+    <div class='span12 no-margin'>
+        <h1>{% trans "People following you" %}</h1>
+    </div>
+    <div class='span12 no-margin '>
+        <ul id='followers'>
+        <img class='loading-mask' src='/media/images/loading-white.gif'/>
+        </ul>
+        <div class='cell-pagination' id='followers-pagination'></div>
+    </div>
+
 </div>
 {% else %}
 <div class='row'>
