--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -147,6 +147,7 @@ HTML, BODY { height: 100%; }
        var g_default_radio_uuid = '{{ current_uuid }}';
        var g_sound_player = '{{ sound_player }}';
        var g_show_welcome_popup = {% if show_welcome_popup %}true{% else %}false{% endif %};
+       var g_hd_enabled = {% if hd_enabled %}true{% else %}false{% endif %};
     </script>
 
 
