added followers/friends count in people page

--- a/yaapp/templates/yabase/app/friends/friendsPage.mustache
+++ b/yaapp/templates/yabase/app/friends/friendsPage.mustache
@@ -2,7 +2,7 @@
 {% if request.user.is_authenticated %}
 <div class='row common-background'>
     <div class='span12 no-margin'>
-        <h1>{% trans "People you follow" %}</h1>
+        <h1>{% trans "People you follow" %} (<span id='friends-count'></span>)</h1>
     </div>
 
     <div class='span12 invite'>
@@ -19,7 +19,7 @@
     </div>
 
     <div class='span12 no-margin'>
-        <h1>{% trans "People following you" %}</h1>
+        <h1>{% trans "People following you" %} (<span id='followers-count'></span>)</h1>
     </div>
     <div class='span12 no-margin '>
         <ul id='followers'>
