--- a/yaapp/templates/yabase/app/profile/profilePage.mustache
+++ b/yaapp/templates/yabase/app/profile/profilePage.mustache
@@ -22,7 +22,7 @@
 
    <div class='span12 no-margin' id='friends-zone'>
       <button class='yabutton right' id='friends-btn'>{% trans 'All people' %}</button>
-      <h2 class='zone-title'>{% trans "People you follow" %} (<span id='friends-count'>(0)</span>)</h2>
+      <h2 class='zone-title'>{% trans "People you follow" %} (<span id='friends-count'>0</span>)</h2>
       <ul class='' id='friends'>
       </ul>
      <div class='separation-line'></div>
@@ -31,7 +31,7 @@
 
   <div class='span12 no-margin' id='followers-zone'>
     <button class='yabutton right' id='followers-btn'>{% trans 'All people' %}</button>
-    <h2 class='zone-title'>{% trans "People following you" %} (<span id='followers-count'>(0)</span>)</h2>
+    <h2 class='zone-title'>{% trans "People following you" %} (<span id='followers-count'>0</span>)</h2>
     <ul class='' id='followers'>
     </ul>
   </div>
