--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -72,6 +72,7 @@ HTML, BODY { height: 100%; }
 
     <link rel="stylesheet" href="/media/js/colibri/colibri.css"/>
     <link rel="stylesheet" href="/media/js/chosen/chosen.css"/>
+    <link rel="stylesheet" href="/media/css/bootstrap-toggle-buttons.css"/>
 
     <link rel="stylesheet" href="/media/css/webapp.css"/>
     {% endcompress %}
@@ -100,6 +101,7 @@ HTML, BODY { height: 100%; }
     <script type="text/javascript" type="text/javascript" src="/media/js/flot/jquery.flot.js"></script>
     <script type="text/javascript" type="text/javascript" src="/media/js/flot/jquery.flot.selection.js"></script>
     <script language="javascript" type="text/javascript" src="/media/js/flot/jquery.flot.resize.js"></script>
+    <script src="/media/js/jquery.toggle.buttons.js" type="text/javascript"></script>
     <script src="/media/js/jquery.uniform.js" type="text/javascript"></script>
 {% endcompress %}
 
