another attempt to fix broken deezer iframe size

--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -325,7 +325,7 @@ HTML, BODY { height: 100%; }
 {% endblock %}
 
 </head>
-<body>
+<body id='yasound'>
 <div id="loading-mask" style="display:none;"></div>
 <div id="loading" style="display:none;">
 <span id="loading-message">{% trans "Loading application..." %}</span>
