wip on gifts in popup

--- a/yaapp/templates/yabase/app/track.mustache
+++ b/yaapp/templates/yabase/app/track.mustache
@@ -7,6 +7,12 @@
             <input type='checkbox' id='hd-checkbox' {% if hd_enabled %}checked='checked'{% else %}disabled=""{% endif %}>
         </div>
     </div>
+    <div id='gifts-container'>
+        <ul id='gifts'>
+            <img class='loading-mask' src='/media/images/loading.gif'/>
+        </ul>
+        <div id='pagination'></div>
+    </div>
    </div>
 </div>
 
