--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -160,6 +160,9 @@ HTML, BODY { height: 100%; }
    <script type="text/html" id="trackInRadioTemplate">
       {% include "yabase/app/radio/track.mustache" with yasound_song=None %}
    </script>
+   <script type="text/html" id="giftTemplate">
+      {% include "yabase/app/gifts/gift.mustache" %}
+   </script>
 
    <script type="text/html" id="trackTemplate">
       {% include "yabase/app/track.mustache" with yasound_song=None %}
