removed duplicate actions buttons

--- a/yaapp/templates/yabase/app/radio/radio.mustache
+++ b/yaapp/templates/yabase/app/radio/radio.mustache
@@ -39,22 +39,19 @@
         {% endif %}
    </div>
 	<ul id='radio-actions-container'>
-		<li class='wall-first-child'><a data-toggle="modal" href="#modal-share"><img src="/media/app/images/radio/radio-icon-share.png"/><span>{% trans "Share" %}</span></a></li>
     {% if radio %}
       {% ifequal radio.creator request.user %}
-        <li><a href='{{ root }}radio/{{ radio.uuid }}/edit/' id="settings-btn"><img src="/media/app/images/radio/radio-icon-settings.png"/><span>{% trans "Settings" %}</span></a></li>
+        <li class='wall-first-child'><a href='{{ root }}radio/{{ radio.uuid }}/edit/' id="settings-btn"><img src="/media/app/images/radio/radio-icon-settings.png"/><span>{% trans "Settings" %}</span></a></li>
         <li><a href='{{ root }}radio/{{ radio.uuid }}/programming/' id="programming-btn"><img src="/media/app/images/radio/radio-icon-music.png"/><span>{% trans "Programming" %}</span></a></li>
-        <li><a href="#" id='broadcast-btn'><img src="/media/app/images/radio/radio-icon-message.png"/><span>{% trans "Broadcast to your fans" %}</span></a></li>
+        <li class='wall-last-child'><a href="#" id='broadcast-btn'><img src="/media/app/images/radio/radio-icon-message.png"/><span>{% trans "Broadcast to your fans" %}</span></a></li>
       {% endifequal %}
     {% else %}
   		<%#creator%>
       <%#owner%>
   		<li><a href='{{ root }}radio/<%uuid%>/edit/' id="settings-btn"><img src="/media/app/images/radio/radio-icon-settings.png"/><span>{% trans "Settings" %}</span></a></li>
   		<li><a href='{{ root }}radio/<%uuid%>/programming/' id="programming-btn"><img src="/media/app/images/radio/radio-icon-music.png"/><span>{% trans "Programming" %}</span></a></li>
-      <li><a href="#" id='broadcast-btn'><img src="/media/app/images/radio/radio-icon-message.png"/><span>{% trans "Broadcast to your fans" %}</span></a></li>
+      <li class='wall-last-child'><a href="#" id='broadcast-btn'><img src="/media/app/images/radio/radio-icon-message.png"/><span>{% trans "Broadcast to your fans" %}</span></a></li>
   		<%/owner%>
       <%/creator%>
     {% endif %}
-    <li class='wall-last-child'><a href="#" id="like-btn"><img src="/media/app/images/radio/radio-icon-heart.png"/><span>{% trans "Like song" %}</span></a></li>
-    {# <li class='wall-last-child'><a  href="#"><img class='actions-btn' src="/media/app/images/radio/radio-icon-embed.png"/>intégrer la radio sur mon site</a></li> #}
 	</ul>
