--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -277,7 +277,7 @@ body {
 #hd-box-container {
     position:absolute;
     top:45px;
-    left:-180px;
+    left:-378px;
     display:block;
     width:400px;
     background-color:rgba(44, 46, 47, 0.99);
@@ -306,7 +306,7 @@ body {
     content:url('../app/images/login/login-tooltip.png');
     position:absolute;
     top:-13px;
-    left:48%;
+    right:14px;
 }
 #hd-box-container #hd-status {
     height:48px;
@@ -590,6 +590,10 @@ body {
     color: #d5d7d8;
     font-size:15px;
     cursor:pointer;
+}
+
+#player #metadata-container #radio-title span:hover {
+    color: white;
 }
 
 #player #metadata-container .button-group {
@@ -1589,7 +1593,9 @@ input::-webkit-input-placeholder {
 #player #player-title span {
     width:330px;
 }
-
+#player #player-title span:hover {
+    color: #D5D7D8;
+}
 #player #details {
     margin-top: 4px;
     float: left;
