added full song title on player

--- a/yaapp/templates/yabase/app/track.mustache
+++ b/yaapp/templates/yabase/app/track.mustache
@@ -39,7 +39,7 @@
                     {% endif %}
                 </a>
             </div>
-            <span>{{ yasound_song.title|default:'<% name %>' }}</span>
+            <span>{{ yasound_song.title|default:'<% title_wrapped %>' }}</span>
 
             <div class='button-group'>
                 <a href="#" id="love-btn" class='yatooltip-share'>
