--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -630,8 +630,47 @@ body {
     background:url('../app/images/play-btn-large.png') no-repeat 50% 50%;
 }
 
+#player #radio-cover .pause:hover {
+    background:url('../app/images/pause-btn-large.png') no-repeat 50% 50%;
+    filter:alpha(opacity=100);-moz-opacity:1;opacity: 1;
+
+    -moz-transition-property: opacity;
+    -moz-transition-duration: 0.2s;
+    -moz-transition-delay: 0.2s;
+    /* WebKit */
+    -webkit-transition-property: opacity;
+    -webkit-transition-duration: 0.2s;
+    -webkit-transition-delay: 0.2s;
+    /* Opera */
+    -o-transition-property: opacity;
+    -o-transition-duration: 0.2s;
+    -o-transition-delay: 0.2s;
+    /* Standard */
+    transition-property: opacity;
+    transition-duration: 0.2s;
+    transition-delay: 0.2s;
+
+}
+
 #player #radio-cover .pause {
     background:url('../app/images/pause-btn-large.png') no-repeat 50% 50%;
+    filter:alpha(opacity=0);-moz-opacity:0.0;opacity: 0.0;
+
+    -moz-transition-property: opacity;
+    -moz-transition-duration: 0.5s;
+    -moz-transition-delay: 0.5s;
+    /* WebKit */
+    -webkit-transition-property: opacity;
+    -webkit-transition-duration: 0.5s;
+    -webkit-transition-delay: 0.5s;
+    /* Opera */
+    -o-transition-property: opacity;
+    -o-transition-duration: 0.5s;
+    -o-transition-delay: 0.5s;
+    /* Standard */
+    transition-property: opacity;
+    transition-duration: 0.5s;
+    transition-delay: 0.5s;
 }
 
 #profile-picture {
